--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 <html>
+<head>
+<style>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <h1> hello</h1>
 </html>
