--- a/index.html
+++ b/index.html
@@ -3,5 +3,15 @@
 <head>
 <style>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
-<h1> hello</h1>
+  </style>
+  <h1> hello</h1>
+
+</head>
+<body>
+
+<h1>My First CSS Example</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
 </html>
