--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+  <ul>
+  <li><a href="csshtml.html">Home</a></li>
+  <li><a href="news.html">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
 <style>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </style>
