--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <li><a href="about.asp">About</a></li>
 </ul>
 <style>
-<link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </style>
 </head>
 <body>
