--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <html>
-<head>
-  <ul>
-  <li><a href="csshtml.html">Home</a></li>
-  <li><a href="news.html">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
-</ul>
-<style>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-</style>
-</head>
-<body>
-<h1> hello</h1>
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
+  <head>
+    <title>flowerz</title>
+    <style>
+      <link rel="stylesheet" type="text/css" href="mystyle.css">
+    </style>
+  </head>
+  
+  <body>
+    <ul>
+      <li><a href="csshtml.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.asp">Contact</a></li>
+     <li><a href="about.asp">About</a></li>
+   </ul>
 
-</body>
+    <h1> hello</h1>
+    <h1>My First CSS Example</h1>
+    <p>This is a paragraph.</p>
+
+  </body>
 </html>
 
