--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>flowerz</title>
-
+    <style>
       <link rel="stylesheet" type="text/css" href="mystyle.css">
-
+    </style>
   </head>
   
   <body>
@@ -13,10 +13,8 @@
       <li><a href="contact.asp">Contact</a></li>
      <li><a href="about.asp">About</a></li>
    </ul>
-
-    <h1> hello</h1>
-    <h1>My First CSS Example</h1>
-    <p>This is a paragraph.</p>
+    <h1>Fishponds Flowers</h1>
+    <p>Full of bespoke flowers with no limit to the supply.</p>
 
   </body>
 </html>
