--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <li><a href="news.html">News</a></li>
       <li><a href="contact.asp">Contact</a></li>
      <li><a href="about.asp">About</a></li>
+         
    </ul>
+    <img src="flower1.jpg" alt="Flowers in Chania">
   </body>
 </html>
 
