--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <li><a href="about.asp">About</a></li>
          
    </ul>
-    <img src="flower1.jpg" alt="Flowers in Chania">
+    <img src="flower1.jpg" alt="Flowers in Chania" width="50" height="60">
   </body>
 </html>
 
